new option: hide media title

--- a/lang/mediawidget-de_DE.po
+++ b/lang/mediawidget-de_DE.po
@@ -34,3 +34,6 @@ msgstr "Anzahl der gezeigten Elemente:"
 
 msgid "Open in new tab:"
 msgstr "Im neuen Tab öffnen:"
+
+msgid "Hide media title:"
+msgstr "Verstecke Medien Titel:"
